## twilio_client.py

from twilio.rest import Client
from models import Appointment

class TwilioClient:
    def __init__(self, account_sid: str, auth_token: str, from_number: str):
        self.client = Client(account_sid, auth_token)
        self.from_number = from_number

    def send_call(self, appointment: Appointment) -> None:
        """
        Sends a call to the patient for the given appointment.

        Args:
            appointment (Appointment): The appointment to send the call for.
        """
        # Implementation goes here

    def send_text(self, appointment: Appointment) -> None:
        """
        Sends a text message to the patient for the given appointment.

        Args:
            appointment (Appointment): The appointment to send the text message for.
        """
        # Implementation goes here

    def handle_patient_response(self, appointment: Appointment, response: str) -> None:
        """
        Handles the patient's response to the appointment.

        Args:
            appointment (Appointment): The appointment for which the response is received.
            response (str): The patient's response.
        """
        # Implementation goes here

    def send_reminder(self, appointment: Appointment) -> None:
        """
        Sends a reminder to the patient for the given appointment.

        Args:
            appointment (Appointment): The appointment to send the reminder for.
        """
        # Implementation goes here

